# LensFlare_CGSeminar

./: .gitignore
LensFlare_CGSeminar/: .gitignore  CMakeLists.txt
LensFlare_CGSeminar/framework/: CMakeLists.txt
LensFlare_CGSeminar/framework/src/: window.cpp
LensFlare_CGSeminar/shaders/: annotation_frag.glsl  annotation_vert.glsl  build_frag.glsl  build_vert.glsl  light_frag.glsl  light_vertex.glsl  quadcenter_frag.glsl  quadcenter_vert.glsl  shader_frag.glsl  shader_vert.glsl  starburst_frag.glsl  starburst_vertex.glsl
LensFlare_CGSeminar/src/: aperture_maker.cpp  aperture_maker.h  application.cpp  batch_fitness.cl  camera.cpp  camera.h  coating_solver.cpp  coating_solver.h  dump.txt  lens_builder.cpp  lens_builder.h  lens_solver.cpp  lens_solver.h  lens_system.cpp  lens_system.h  line_drawer.cpp  line_drawer.h  old_application.cpp  preset_lens_systems.cpp  preset_lens_systems.h  quad.cpp  quad.h  ray_propagation_drawer.cpp  ray_propagation_drawer.h  ray_transfer_matrices.cpp  ray_transfer_matrices.h  reverse_coating.cpp  reverse_coating.h  starburst.cpp  starburst.h  utils.cpp  utils.h
LensPlanner/: CMakeLists.txt
LensPlanner/framework/: CMakeLists.txt
LensPlanner/framework/OpenLensFlare/: CMakeLists.txt
LensPlanner/framework/OpenLensFlare/src/: Common_ColorSpace.glsl  Dependencies.h  DiffractionStarburstAlgorithm.cpp  DiffractionStarburstAlgorithm.h  GLHelpers.h  OpenLensFlare.h  RayTraceGhostAlgorithm.cpp  RayTraceGhostAlgorithm_RenderGhost_VertexShader.glsl
LensPlanner/shaders/: shader_frag.glsl
LensPlanner/src/: AttributeCellWidgets.h  Dependencies.h  LensFlarePreviewer.cpp  LensFlarePreviewer.h  MainWindow.cpp
OpenLensFlare/: CMakeLists.txt
